# OmniAgent

./: Cargo.toml  Dockerfile  README.md  config.json  output.glue
CPIs/: cpi-container.json  cpi-docker-win.json
src/: agent.rs  cpi_actions.rs  docker.rs  error.rs  lib.rs  main.rs  metrics.rs
src/api/: mod.rs
src/metrics/: mod.rs
src/routes/: container.rs  index.rs  instances.rs  mod.rs
