[package]
name = "omni-agent"
version = "0.q.0"
edition = "2021"
description = "Scalable container management and deployment agent"
authors = ["Tristan J. Poland"]
license = "MIT"

[dependencies]
lazy_static = "1.4.0"
# Async runtime
tokio = { version = "1.35.0", features = ["full"] }

# Web framework
rocket = { version = "0.5.0-rc.3", features = ["json"] }
rocket_cors = "0.6.0"
reqwest = { version = "0.11.6", features = ["json"] }

# Docker interaction
bollard = "0.15.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"
console = "0.14"

# System information
sysinfo = "0.30.0"
winapi = { version = "0.3.9", features = ["winerror"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
opt-level = 0
debug = true
