[package]
name = "omni-agent"
version = "0.1.0"
edition = "2021"
description = "Scalable container management and deployment agent"
authors = ["Tristan J. Poland"]
license = "MIT"

[dependencies]
thiserror = "1.0"
rocket = { version = "0.5.0", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = {version = "0.8", features = ["v4"]}
colored = "1.0"

# System information
sysinfo = "0.30.0"
winapi = { version = "0.3.9", features = ["winerror"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
opt-level = 0
debug = true
