[package]
name = "omni-agent"
version = "0.1.1"
edition = "2021"
description = "Scalable container management and deployment agent"
authors = ["Tristan J. Poland"]
license = "MIT"

[dependencies]
thiserror = "2.0.12"
rocket = { version = "0.5.0", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json5 = "0.2.1"
uuid = {version = "1.16.0", features = ["v4"]}
colored = "3.0.0"
bollard = { version = "0.18.1", features = [] }
futures = "0.3.25"
chrono = { version = "0.4.40", features = ["serde"] }
env_logger = "0.11.0"
tokio = { version = "1.34", features = ["full"] }
lazy_static = "1.4.0"
reqwest = { version = "0.11.16", features = ["json"] }
libomni = "0.2.3"

# System information
sysinfo = "0.34.1"
winapi = { version = "0.3.9", features = ["winerror"] }
hostname = "0.4.0"
num_cpus = "1.16.0"
sys-info = "0.9.1"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
opt-level = 0
debug = true
